Add note endpoints to api docs
